--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css'
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+body {
+	padding: 0;
+	margin: 0;
+	Font-family: Roboto, sans-serif;
+}
 
+.container {
+	margin: 20px;
+	display: flex;
+}
