--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -12,13 +12,14 @@
         <md-card-title>
           <h3>{{dish.name | uppercase}}</h3>
         </md-card-title>
-      </md-card-header>
+      </md-card-header> 
 
       <img md-card-image src={{dish.image}} alt={{dish.name}}>
       
       <md-card-content>
         <p>{{dish.description}}</p>
         <md-card-actions>
+          <button md-button (click)="goBack()">BACK</button>
           <button md-button>LIKE</button>
           <button md-button>SHARE</button>
         </md-card-actions>
