--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,24 @@
 <p>{{ user | json }}</p>
 
-<form novalidate (ngSubmit)="onSubmit()">
+<form novalidate #loginForm="ngForm" (ngSubmit)="onSubmit()">
 
   <md-dialog-content>
     <p>
-      <md-input-container>
-        <input mdInput placeholder="Username" type="text" [(ngModel)]="user.username" name="username" required>
+      <md-input-container dividerColor="{{ username.invalid && !username.pristine ? 'warn' : 'primary' }}" >
+        <input mdInput placeholder="Username" type="text" #username="ngModel" [(ngModel)]="user.username" name="username" required>
+        <md-hint>
+            <span [hidden]="username.pristine">
+              <span [hidden]="!username.errors?.required" >User Name is required</span>
+            </span>
+          </md-hint>
       </md-input-container>
-      <md-input-container>
-        <input mdInput placeholder="Password" type="password" [(ngModel)]="user.password" name="password" required>
+      <md-input-container dividerColor="{{ password.invalid && !password.pristine ? 'warn' : 'primary' }}">
+        <input mdInput placeholder="Password" type="password" #password="ngModel" [(ngModel)]="user.password" name="password" required>
+        <md-hint>
+          <span [hidden]="password.pristine">
+            <span [hidden]="!password.errors?.required">Password is required</span>
+          </span>
+        </md-hint>
       </md-input-container>
       <md-checkbox [(ngModel)]="user.remember" name="remember">Remember Me</md-checkbox>
     </p>
@@ -16,6 +26,6 @@
   <md-dialog-actions>
     <span class="flex-spacer"></span>
     <button md-button md-dialog-close>Cancel</button>
-    <button type="submit" md-button class="background-primary text-floral-white" >Login</button>
+    <button type="submit" md-button class="background-primary text-floral-white" [disabled]="loginForm.form.invalid" >Login</button>
   </md-dialog-actions>
 </form>
