--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -54,7 +54,7 @@ fxLayoutGap="10px">
  </div>
 
 
-   <div fxFlex>
+   <div fxFlex *ngIf="leaders">
      <h2>Corporate Leadership</h2>
      <md-list>
       <md-list-item *ngFor="let led of leaders">
@@ -64,5 +64,8 @@ fxLayoutGap="10px">
         <div md-line>{{ led.description }}</div>
       </md-list-item>
     </md-list>
+  </div>
+  <div [hidden] = "leaders">
+    <md-spinner></md-spinner> <h4>Loading... Please Wait</h4>
   </div>
 </div>
