--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -27,6 +27,9 @@
 
     </md-card>
   </div>
+  <div [hidden]="dish">
+    <md-spinner></md-spinner>  <h4>Loading... Please Wait</h4>
+</div>
 
     <div fxFlex="40">
       <div fxFlex *ngIf="dish">
