--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,6 +17,9 @@
    <p>{{dish.description}}</p>
   </md-card-content>
  </md-card>
+ <div [hidden]="dish">
+     <md-spinner></md-spinner>  <h4>Loading... Please Wait</h4>
+ </div>
 
  <md-card *ngIf="promotion" fxFlex="30">
   <md-card-header>
@@ -30,6 +33,9 @@
    <p>{{promotion.description}}</p>
   </md-card-content>
  </md-card>
+ <div [hidden]="dish">
+     <md-spinner></md-spinner>  <h4>Loading... Please Wait</h4>
+ </div>
 
  <md-card *ngIf="leader" fxFlex="30">
     <md-card-header>
@@ -43,5 +49,8 @@
      <p>{{leader.description}}</p>
     </md-card-content>
    </md-card>
+   <div [hidden]="dish">
+       <md-spinner></md-spinner>  <h4>Loading... Please Wait</h4>
+   </div>
 
 </div>
