--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,7 +6,7 @@
     fxLayoutGap="10px" 
     fxLayoutGap.xs="0">
 
-    <div fxFlex="40" *ngIf="dish">
+    <div fxFlex="40" *ngIf="dish" [@visibility]="visibility" >
     <md-card>
       <md-card-header>
         <md-card-title>
@@ -37,7 +37,7 @@
   <h4>{{errMess}}</h4>
 </div>
 
-   <div fxFlex="40" *ngIf="dish">
+   <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
     <h3>Comments</h3>
       <div fxLayout="column">
         <md-list fxFlex>
