--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -54,7 +54,7 @@ fxLayoutGap="10px">
  </div>
 
 
-   <div fxFlex *ngIf="leaders">
+   <div fxFlex *ngIf="leaders"  [@expand]>
      <h2>Corporate Leadership</h2>
      <md-list>
       <md-list-item *ngFor="let led of leaders">
