--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
  fxLayoutAlign.gt-md="space-around center"
  fxLayoutGap="10px">
 
- <md-card *ngIf="dish" fxFlex="30">
+ <md-card *ngIf="dish" fxFlex="30" [@expand]>
   <md-card-header>
    <div md-card-avatar></div>
    <md-card-title>
@@ -25,7 +25,7 @@
     <h4>{{dishErrMess}}</h4>
   </div>
 
- <md-card *ngIf="promotion" fxFlex="30">
+ <md-card *ngIf="promotion" fxFlex="30" [@expand]>
   <md-card-header>
    <div md-card-avatar></div>
    <md-card-title>
@@ -45,7 +45,7 @@
     <h4>{{promErrMess}}</h4>
   </div>
 
- <md-card *ngIf="leader" fxFlex="30">
+ <md-card *ngIf="leader" fxFlex="30" [@expand]>
     <md-card-header>
      <div md-card-avatar></div>
      <md-card-title>
