--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -15,13 +15,13 @@ fxLayoutGap="10px">
      <div fxFlex="50" fxFlexOffset="20px">
            <h4>Our Address</h4>
            <address>
-             121, Clear Water Bay Road<br>
-             Clear Water Bay, Kowloon<br>
-             HONG KONG<br>
-             <i class="fa fa-phone"></i>: +852 1234 5678<br>
-             <i class="fa fa-fax"></i>: +852 8765 4321<br>
+             56, Block J<br>
+             Ramesh Nagar, New Delhi<br>
+             INDIA<br>
+             <i class="fa fa-phone"></i>: +91 9968967608<br>
+             <i class="fa fa-fax"></i>: +91 1234567890<br>
              <i class="fa fa-envelope"></i>: 
-                   <a href="mailto:confusion@food.net">confusion@food.net</a>
+                   <a href="mailto:jiwanprakash65@gmail.com">jiwanprakash65@gmail.com</a>
           </address>
           <p></p>
            <div>
@@ -37,7 +37,7 @@ fxLayoutGap="10px">
  </div>
  <div fxFlex fxFlexOffset="20px" class="form-size" id="contactForm">
   <h3>Send us your Feedback</h3>
-  <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
+  <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
 
   <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" [hidden]="!flag1 || !flag2" >
     <p>
