--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -22,11 +22,11 @@ fxLayoutGap="10px">
   <div fxFlex="50">
     <h4>Our Address</h4>
     <address style="text-size: 80%">
-      121, Clear Water Bay Road<br> Clear Water Bay, Kowloon<br> HONG KONG<br>
-      <i class="fa fa-phone"></i>: +852 1234 5678<br>
-      <i class="fa fa-fax"></i>: +852 8765 4321<br>
+      56, Block J<br> Ramesh Nagar<br> New Delhi<br>
+      <i class="fa fa-phone"></i>: +91 9968967608<br>
+      <i class="fa fa-fax"></i>: +91 1234567890<br>
       <i class="fa fa-envelope"></i>:
-      <a href="mailto:confusion@food.net">confusion@food.net</a>
+      <a href="mailto:jiwanprakash65@gmail.com">jiwanprakash65@gmail.com</a>
     </address>
   </div>
 </div>
@@ -43,7 +43,7 @@ fxLayoutGap="10px">
 </div>
 <div fxFlex="100" fxFlexAlign="center center">
 <div style="text-align:center;">
-  <p>© Copyright 2015 Ristorante Con Fusion</p>
+  <p>© Copyright 2017 Ristorante Con Fusion</p>
 </div>
 </div>
 </div>
